# RustoHebru

./: .gitignore  Cargo.toml  README.md  vercel.json
scripts/: install_dependencies.sh
src/: error.rs  evaluation.rs  file_processor.rs  file_saver.rs  gui.rs  image_processor.rs  language_detection.rs  learning_manager.rs  lib.rs  main.rs  monitoring.rs  optimization.rs  quality_control.rs  resources.rs  security.rs  technical_dictionary.rs  technical_terms.rs  text_analyzer.rs  tokenizer.rs  translation.rs
src/metrics/: mod.rs  tests.rs  thresholds.rs
src/morphology/: analyzer.rs  hebrew.rs  mod.rs  patterns.rs  russian.rs  semantic.rs
src/neural/: mod.rs  model.rs  normalization.rs  optimization.rs  training.rs
src/validation/: mod.rs
static/: index.html
