[package]
name = "rustohebru"
version = "0.2.0"
edition = "2021"
authors = ["Osher David"]
description = "מערכת לתרגום טכני מרוסית לעברית"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5.3"
log = "0.4"
env_logger = "0.10"
regex = "1.9"
lazy_static = "1.4"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4" 